Fix slow Hairy brush on CMYK.

o create the color transformation once per dab
o clean up the code

BUG:244910

svn path=/trunk/koffice/; revision=1176041